# rust-run

./: .gitignore  Cargo.toml  README.md  build.bat  build.sh  decoder_test  encoder.py  es-dictionary.txt  esp-dictionary.txt  load.txt  loads.txt  qwertytext.txt  shellcode_output.rs  updater_event.ps1
mal-bin/: payload_x64.c
src/: decoder_test.rs  main.rs
